unit tests almost done

--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,10 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <meta
+      name="onflogin"
+      content="$ONFLOGIN"
+    />
   </head>
   <body class="mat-typography">
     <aep-root></aep-root>
